@@ -122,6 +122,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   and a way to tell the user to create a profile before using the 
   server/local test
 **** TODO Handle the Options gamestate
+     CLOCK: [2016-11-17 jeu. 05:04]--[2016-11-17 jeu. 05:32] =>  0:28
      CLOCK: [2016-11-17 jeu. 04:10]--[2016-11-17 jeu. 05:04] =>  0:54
      CLOCK: [2016-11-16 mer. 05:24]--[2016-11-16 mer. 06:10] =>  0:46
      CLOCK: [2016-11-16 mer. 02:11]--[2016-11-16 mer. 02:39] =>  0:28
